--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/CSS/global.css">
     <link rel="stylesheet" href="/static/CSS/index.css">
+    <!-- JS TRANSIÇÃO -->
+    <script src="https://unpkg.com/scrollreveal"></script>
     <title>EASY-REQUEST</title>
 </head>
 <body>
@@ -13,12 +15,12 @@
     <nav>
         <div class="nav-img">
             <!-- Logo ou identidade visual da marca -->
-            <img src="/static/IMG/Brand Identity and Design.svg" alt="Logotipo do Easy-Request">
+            <img id="logo" src="/static/IMG/Brand Identity and Design.svg" alt="Logotipo do Easy-Request">
         </div>
     </nav>
     <main>
         <!-- Container principal para o conteúdo da página -->
-        <div class="container-abaixo">
+        <div class="container-abaixo" id="container-abaixo">
             <div class="container__abaixo--conteudotxt">
                 <!-- Título e descrição da página -->
                 <h2>BEM-VINDO AO</h2>
@@ -36,5 +38,6 @@
             </div>
         </div>
     </main>
+    <script src="/static/JS/index.js"></script>
 </body>
 </html>
