Conferindo o tipo de usuário cadastrado

--- a/templates/RF001-cad.html
+++ b/templates/RF001-cad.html
@@ -30,7 +30,7 @@
                     <!-- Rótulo para a seleção da profissão -->
                     <label for="funcao" class="form-container__label">Informe sua profissão:</label>
                     <!-- Campo de seleção com opções de profissão -->
-                    <select id="funcao" name="funcao" class="form-container__select" onchange="toggleImages()">
+                    <select id="funcao" name="funcao" class="form-container__select">
                         <option value="">Selecione...</option>
                         <option value="1">Técnico de Manutenção</option>
                         <option value="2">Instrutor</option>
