--- a/templates/RF002-log.html
+++ b/templates/RF002-log.html
@@ -19,10 +19,10 @@
     <body>
         <main>
             <!-- Container para a inserção da imagem de fundo -->
-            <section class="container-main">
+            <section class="container-main" id="container-main">
             </section>
             <!-- Container para o Formulario de Login -->
-            <div class="container-form">
+            <div class="container-form" id="container-form">
                 <form action="/RF002" method="POST">
                     <h1>Login</h1>
                     <label for="inp-SN">SN:</label>
@@ -39,5 +39,6 @@
                 <img src="/static/IMG/Brand Identity and Design.svg" alt="Logo Easy Request">
             </section>
         </footer>
+        <script src="/static/JS/RF002-log.js"></script>
     </body>
 </html>
