Finalização da alteração do cadastro para ajax

--- a/templates/RF001-cad.html
+++ b/templates/RF001-cad.html
@@ -82,6 +82,6 @@
                 <button class="form-container__button" onclick="cadastrar()">Cadastrar</button>
         </section>
     </main>
-    <script src="/static/JS/RF001-cad.js"></script>
+    <script src="/static/JS/RF001-cad.js" defer></script>
 </body>
 </html>
