Termino da transição da tela cadastro

--- a/static/CSS/RF001-cad.css
+++ b/static/CSS/RF001-cad.css
@@ -175,3 +175,6 @@ body {
     }
 }
 /* -----------------------EFEITO DE TRANSIÇAÕ------------------ */
+#form-container{
+    visibility: hidden;
+}
