--- a/templates/RF001-cad.html
+++ b/templates/RF001-cad.html
@@ -11,12 +11,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- link JS biblioteca SweetAlert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
+    <!-- link JS biblioteca scrollrevealjs -->
+    <script src="https://unpkg.com/scrollreveal"></script>
     <title>EASY-REQUEST - Cadastro</title>
 </head>
 <body>
     <main class="main">
-        <section class="form-container">
+        <section id="form-container" class="form-container ">
             <h2 class="form-container__title">Cadastro</h2>
                 
                 <!-- Seção que exibe as imagens baseadas na seleção da profissão -->
