Termino da transição da tela de login

--- a/static/CSS/RF002-log.css
+++ b/static/CSS/RF002-log.css
@@ -149,3 +149,6 @@ footer{
     }
 }
 /* -----------------------EFEITO DE TRANSIÇAÕ------------------ */
+#container-main,#container-footer{
+    visibility: hidden;
+}
