--- a/templates/RF002-log.html
+++ b/templates/RF002-log.html
@@ -10,11 +10,12 @@
         <link rel="stylesheet" href="/static/CSS/global.css">
         <!-- Link Arquivo CSS -->
          <link rel="stylesheet" href="/static/CSS/RF002-log.css">
-        <!-- Link Arquivo JS -->
-         <script defer src="/static/JS/RF002-log.js"></script>
+          <!-- link JS biblioteca scrollrevealjs -->
+          <script src="https://unpkg.com/scrollreveal"></script>
          <!-- link JS biblioteca SweetAlert -->
          <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
+          <!-- Link Arquivo JS -->
+          <script defer src="/static/JS/RF002-log.js"></script>
     </head>
     <body>
         <main>
@@ -35,7 +36,7 @@
         </main>
         <footer>
             <!-- Container com a Logo do Projeto -->
-            <section class="container-footer">
+            <section class="container-footer" id="container-footer" >
                 <img src="/static/IMG/Brand Identity and Design.svg" alt="Logo Easy Request">
             </section>
         </footer>
