--- a/templates/RF002-log.html
+++ b/templates/RF002-log.html
@@ -12,6 +12,8 @@
          <link rel="stylesheet" href="/static/CSS/RF002-log.css">
         <!-- Link Arquivo JS -->
          <script defer src="/static/JS/RF002-log.js"></script>
+         <!-- Biblioteca jQuery para facilitar o uso de Ajax e manipulação de DOM -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
          <!-- link JS biblioteca SweetAlert -->
          <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
