Termino da transição da tela RF003

--- a/static/CSS/RF003-solic.css
+++ b/static/CSS/RF003-solic.css
@@ -246,3 +246,7 @@ input,select{
     }
    
 }
+/* -----------------------EFEITO DE TRANSIÇAÕ------------------ */
+#container-header,#container-header-user, #container-main{
+    visibility: hidden;
+}
