Termino da transição da tela RF004A

--- a/static/CSS/RF004A-detlSolic.css
+++ b/static/CSS/RF004A-detlSolic.css
@@ -154,3 +154,7 @@ nav{
         max-width: 70rem;
     }
 }
+/* ---------------TRANSIÇÃO------------------- */
+#container-header,#detalhes-solicitacao{
+    visibility: hidden;
+}
