--- a/templates/RF003-solic.html
+++ b/templates/RF003-solic.html
@@ -26,7 +26,7 @@
                 <div class="container-header_btn">
                     <button class="container-header_btn-voltar" href=''><i class="fa-solid fa-arrow-left"></i>Voltar</button>
                 </div>
-                <div class="horas"></div>
+                <div class="horas">
                     <h2 class="saudacao" id="saudacao"></h2>
                 </div>
                 <div class="container-header_data">
