--- a/templates/RF004-ADMrecbSolic.html
+++ b/templates/RF004-ADMrecbSolic.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="/static/CSS/RF004-ADMrecbSolic.css">
     <script defer src="/static/JS/funcao-data.js"></script>
     <script defer src = "/static/JS/funcao-horas.js"></script>
-
+    <!-- Biblioteca de ícones do Font Awesome para uso de ícones na página -->
+    <script src="https://kit.fontawesome.com/e9b74fb3c4.js" crossorigin="anonymous"></script>
     <!-- link JS biblioteca SweetAlert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>EASY-REQUEST - Inicial</title>
@@ -17,7 +18,9 @@
     <header class="header">
         <!-- Container para a data e botão de menu -->
         <div class="header__date-container">
-            <div class="header__button"></div>
+            <div class="header__button">
+                <button class="header_btn-voltar" href=''><i class="fa-solid fa-arrow-left"></i>Voltar</button>
+            </div>
             <div class="horas">
                 <h2 class="saudacao" id="saudacao"></h2>
             </div>
