--- a/static/CSS/RF004-ADMrecbSolic.css
+++ b/static/CSS/RF004-ADMrecbSolic.css
@@ -10,7 +10,35 @@
 .header__date-container {
     height: 5vh; 
     display: flex; 
-    justify-content: space-between; 
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header_btn-voltar{
+    margin: 1rem;
+    padding: 0.5rem;
+    width: 10rem;
+    border-color: var(--color02);
+    border-radius: 5rem;
+    background: none;
+    font-weight: 700;
+    transition-duration: 0.2s;
+    color: var(--color02);
+  }
+  
+  .header_btn-voltar i{
+    margin-right: 0.5rem;
+  }
+  
+  .header_btn-voltar:hover{
+    border-color: none;
+    background-color: var(--color02);
+    color: var(--color01);
+  }
+/* Estilo da Saudação */
+.horas h2{
+    font-size: 2.5rem;
+    font-weight: 300;
 }
 
 /* Estilo da Data */
@@ -237,6 +265,9 @@
 
 /* 3 colunas para telas grandes */
 @media (min-width: 1030px) {
+    .horas h2{
+        font-size: 3.5rem;
+    }
     .sectionBaixo__grid-section {
         grid-template-columns: 1fr 1fr 1fr; 
     }
@@ -244,7 +275,3 @@
         max-width: 31.5rem; 
     }
 }
-<<<<<<< HEAD
-
-=======
->>>>>>> 1e08111336b064b1f7c9487922fe7240d7721cfe
