Termino da transição da tela RF006-AceitaçãoSolicitação A

--- a/static/CSS/RF006A-aceitaSolic.css
+++ b/static/CSS/RF006A-aceitaSolic.css
@@ -154,3 +154,7 @@ nav{
         max-width: 70rem;
     }
 }
+/* -------------------- Transição -------------------- */
+#container-header, #detalhes-solicitacao{
+    visibility: hidden;
+}
