--- a/templates/RF006A-aceitaSolic.html
+++ b/templates/RF006A-aceitaSolic.html
@@ -7,6 +7,10 @@
     <!-- Importação de arquivos CSS: global e específico desta página -->
     <link rel="stylesheet" href="/static/CSS/global.css">
     <link rel="stylesheet" href="/static/CSS/RF006A-aceitaSolic.css">
+    <!-- Importação do js do site -->
+    <script src="/static/JS/Rf006A-aceitaSolic.js"></script>
+    <!-- link JS biblioteca scrollrevealjs -->
+    <script src="https://unpkg.com/scrollreveal"></script>
     <!-- Biblioteca jQuery para manipulação de DOM e requisições Ajax -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- Biblioteca Font Awesome para uso de ícones na página -->
@@ -19,7 +23,7 @@
 <body>
     <!-- Navegação principal com botão de voltar -->
     <nav>
-        <section class="container-header">
+        <section class="container-header" id="container-header">
             <div class="container-header_btn">
                 <button class="container-header_btn-voltar" href=''><i class="fa-solid fa-arrow-left"></i>Voltar</button>
             </div>
@@ -28,7 +32,7 @@
 
     <!-- Conteúdo principal da página -->
     <main class="conteudo-principal">
-        <section class="detalhes-solicitacao">
+        <section class="detalhes-solicitacao" id="detalhes-solicitacao">
             <!-- Cabeçalho da solicitação com título e autor -->
             <div class="detalhes-solicitacao__cabecalho">
                 <h1 class="detalhes-solicitacao__titulo">{{campo_sala}} - {{campo_servico}}</h1>
