Termino da transição da tela RF007

--- a/static/CSS/RF007-manutConfirm.css
+++ b/static/CSS/RF007-manutConfirm.css
@@ -1,3 +1,24 @@
+html, body {
+    overflow: hidden; /* Desabilita rolagem padrão em ambos os eixos */
+    height: 100%; /* Garante que o body ocupe toda a altura da página */
+}
+
+body {
+    position: relative; /* Para conter o conteúdo e trabalhar com o hack */
+    overflow-x: hidden; /* Remove a barra de rolagem horizontal */
+}
+
+body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: -1.5rem; /* Ajusta essa margem para controlar a largura invisível da rolagem */
+    width: 1.5rem; /* Largura da barra de rolagem invisível */
+    background: transparent; /* Mantém a área invisível */
+    overflow-y: scroll; /* Mantém a funcionalidade de rolagem */
+}
+
 /* Estilo do Cabeçalho */
 .cabecalho,
 .principal__container {
@@ -186,4 +207,8 @@
         font-size: 1.6rem;
         padding: 1.1rem;
     }
+}
+/* --------------TRANSIÇÃO------------- */
+#cabecalho, #principal__container{
+    visibility: hidden;
 }
