--- a/static/CSS/RF010-historicoRelatorio.css
+++ b/static/CSS/RF010-historicoRelatorio.css
@@ -1,4 +1,25 @@
 /* Estilo do cabeçalho da página, centralizando texto e adicionando estilo visual */
+html, body {
+    overflow: hidden; /* Desabilita rolagem padrão em ambos os eixos */
+    height: 100%; /* Garante que o body ocupe toda a altura da página */
+}
+
+body {
+    position: relative; /* Para conter o conteúdo e trabalhar com o hack */
+    overflow-x: hidden; /* Remove a barra de rolagem horizontal */
+}
+
+body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: -1.5rem; /* Ajusta essa margem para controlar a largura invisível da rolagem */
+    width: 1.5rem; /* Largura da barra de rolagem invisível */
+    background: transparent; /* Mantém a área invisível */
+    overflow-y: scroll; /* Mantém a funcionalidade de rolagem */
+}
+
 .cabecalho {
     text-align: center;
     padding: 2rem 2rem 3rem 2rem;
@@ -126,4 +147,8 @@
     .conteudo {
         grid-template-columns: 1fr 1fr 1fr;
     }
+}
+/* -------------TRANSIÇÃO------------ */
+#cabecalho,#conteudo__card{
+    visibility: hidden;
 }
