--- a/templates/RF010-historicoRelatorio.html
+++ b/templates/RF010-historicoRelatorio.html
@@ -7,6 +7,10 @@
     <!-- Links para os estilos CSS globais e específicos da página -->
     <link rel="stylesheet" href="/static/CSS/global.css">
     <link rel="stylesheet" href="/static/CSS/RF010-historicoRelatorio.css">
+    <!-- Importação do JS do site -->
+     <script src="/static/JS/RF010-historicoRelatorio.js"></script>
+    <!-- link JS biblioteca scrollrevealjs -->
+    <script src="https://unpkg.com/scrollreveal"></script>
     <!-- Link para a biblioteca de ícones Font Awesome -->
     <script src="https://kit.fontawesome.com/e9b74fb3c4.js" crossorigin="anonymous"></script>
     <!-- Título da página -->
@@ -14,7 +18,7 @@
 </head>
 <body>
     <!-- Cabeçalho da página -->
-    <header class="cabecalho">
+    <header class="cabecalho" id="cabecalho">
         <!-- Título do cabeçalho -->
         <h1 class="cabecalho__titulo">Histórico de serviços</h1>
 
@@ -30,7 +34,7 @@
     <!-- Conteúdo principal da página -->
     <main class="conteudo">
         <!-- Cartão de histórico de serviço -->
-        <div class="conteudo__card">
+        <div class="conteudo__card" id="conteudo__card">
             <!-- Imagem do profissional responsável pelo serviço -->
             <img src="heitor.jpg" alt="Foto de Heitor Lima" class="conteudo__imagem">
             
