--- a/static/CSS/RF006-TLmanuten.css
+++ b/static/CSS/RF006-TLmanuten.css
@@ -10,13 +10,21 @@ header{
 .container-cumprimentacao{
     width: 100vw;
     display: flex;
+
     justify-content: space-around;
+    align-items: center;
 }
 
 #cumprimentacao{
     align-self: center;
     font-size: 2.5rem;
     font-weight: lighter;
+}
+
+/* Estilo da Saudação */
+.horas h2{
+    font-size: 2.5rem;
+    font-weight: 300;
 }
 
 /* Estilo da data */
@@ -40,6 +48,7 @@ header{
 /* Estilo da Área Usuario */
 .container-header-user{
     width: 100vw;
+    height: 70%;
     display: flex;
     align-items: center;
     padding: 0rem 0rem 0rem 5rem;
@@ -146,13 +155,8 @@ hr{
 /* Estilo serviços encaminhados */
 
 .container-servico-encaminhado{
-<<<<<<< HEAD
     height:auto;
     margin:3rem 1.5rem 0rem 1rem;
-=======
-    height: 45%;
-    margin: 0rem 1rem 0rem 1rem;
->>>>>>> 03aff906f14992d6ef8aa1e2a90d4a5bca68cc5d
 }
 
 .container-servico-encaminhado h2{
@@ -211,14 +215,7 @@ hr{
 
 /* Estilização rodapé "Fazer solicitação"*/
 
-<<<<<<< HEAD
 .container-solicitacao{
-=======
-.container-footer{
-    width: 100vw;
-    height: 17vh;
-    background-color: var(--color06);
->>>>>>> 03aff906f14992d6ef8aa1e2a90d4a5bca68cc5d
     color: var(--color01);
     text-align: center;
     display: flex;
@@ -227,13 +224,8 @@ hr{
     
 }
 
-<<<<<<< HEAD
 .container-solicitacao p{
     padding: 0.5rem;
-=======
-.container-footer p{
-    padding: 1rem;
->>>>>>> 03aff906f14992d6ef8aa1e2a90d4a5bca68cc5d
 }
 
 /* Estilo do btn-fazer-solicitacao */
