--- a/templates/RF006-TLmanuten.html
+++ b/templates/RF006-TLmanuten.html
@@ -16,8 +16,8 @@
         <script src="https://kit.fontawesome.com/e9b74fb3c4.js" crossorigin="anonymous"></script>
         <!-- link Arquivo JS data -->
          <script defer src="/static/JS/funcao-data.js"></script>
+         <!-- Link Arquivo JS saudação -->
          <script defer src = "/static/JS/funcao-horas.js"></script>
-
         <!-- link JS biblioteca SweetAlert -->
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
