--- a/static/CSS/RF006-TLmanuten.css
+++ b/static/CSS/RF006-TLmanuten.css
@@ -190,7 +190,7 @@ hr{
     text-align: center;
     font-size: 1.5rem;
     font-weight: bold;
-    padding-top: 4rem;
+    padding-top: 2rem;
 
 }
 
@@ -198,6 +198,7 @@ hr{
     background-color: var(--color04);
     position: absolute;
     top: 0;
+    left: 0;
     z-index: 1;
     padding: 1rem 3rem;
     border-top-left-radius: 0.5rem;
@@ -232,7 +233,7 @@ hr{
 .btn-fazer-solicitacao{
     border: var(--color03) solid 0.1rem;
     border-radius: 5rem;
-    padding: 0.5rem;
+    padding: 1.5rem;
     background-color: rgba(0, 0, 0, 0.158);
     color: var(--color03);
     font-weight: bold;
