--- a/templates/RF006-TLmanuten.html
+++ b/templates/RF006-TLmanuten.html
@@ -65,7 +65,7 @@
                         <p class="local">Bloco A | Sala 01</p>
                    </div>
                    <div class="servico_urgencia">
-                        <p class="urgencia">Urgencia</p>
+                        <p class="urgencia">Baixa Urgencia</p>
                         <a href=""><i class="fa-solid fa-arrow-right"></i></a>
                    </div>
                 </div>
