--- a/static/CSS/RF006-TLmanuten.css
+++ b/static/CSS/RF006-TLmanuten.css
@@ -10,7 +10,6 @@ header{
 .container-cumprimentacao{
     width: 100vw;
     display: flex;
-
     justify-content: space-around;
     align-items: center;
 }
@@ -34,11 +33,14 @@ header{
     gap: 0.5rem;
     justify-content: center;
     align-items: center;
-    font-size: 1.5rem;
+    font-size: 2rem;
 }
 .data{
     display: flex;
     gap: 0.5rem;
+    border-radius: 5rem;
+    box-shadow:  4px 3px 10px  rgb(135, 135, 135);
+    padding: 0.5rem;
 }
 .dia-semana{
     color: var(--color05);
@@ -80,6 +82,7 @@ main{
     background-color: var(--color06);
     border-top-left-radius: 5rem;  
     border-top-right-radius: 5rem; 
+    box-shadow:  4px 1px 30px  black;
 }
 
 h1{
@@ -108,15 +111,15 @@ hr{
     margin: 1rem 1rem 0rem 1rem;
     height: 45%;
     display: flex;
-    justify-content: center;
     flex-direction: column;
+   
     
 }
 
 .servico{
     background-color: var(--color01);
     border-radius: 1rem;
-    height: 35%;
+    height: 30%;
     margin-bottom: 1.5rem;
     display: flex;
     align-items: center;
@@ -156,7 +159,7 @@ hr{
 
 .container-servico-encaminhado{
     height:auto;
-    margin:3rem 1.5rem 0rem 1rem;
+    margin:1rem 1.5rem 0rem 1rem;
 }
 
 .container-servico-encaminhado h2{
@@ -222,6 +225,7 @@ hr{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-top: 2rem;
     
 }
 
@@ -258,7 +262,7 @@ hr{
 
 .servico-encaminhado {
     width: 100%; 
-    height: auto; 
+    height: 8rem; 
     padding: 1rem; 
     box-sizing: border-box; 
 }
@@ -269,12 +273,20 @@ hr{
         display: flex;
         justify-content: space-between;
     }
+    .horas h2{
+        font-size: 4rem;
+    }
 
+    .data{
+        font-size: 2.5rem;
+       
+    }
     .container-servico {
         width: 50%;
     }
     .container-servico-encaminhado  {
         width: 50%;
+        margin-top: 3rem;
     }
     .container-solicitacao{
         width: auto;
