--- a/static/CSS/RF006A-aceitaSolic.css
+++ b/static/CSS/RF006A-aceitaSolic.css
@@ -60,6 +60,7 @@ nav{
     flex-direction: column;
     align-content: center;
     justify-content: space-evenly;
+    box-shadow:  4px 1px 30px  black;
 }
 
 
