--- a/static/CSS/RF007-manutConfirm.css
+++ b/static/CSS/RF007-manutConfirm.css
@@ -2,6 +2,7 @@
 .cabecalho,
 .principal__container {
     width: 100%;
+    
 }
 
 /* Container do Botão Voltar */
@@ -75,6 +76,7 @@
     padding: 1.5rem;
     display: flex;
     flex-direction: column;
+    box-shadow:  4px 1px 30px  black;
 }
 
 /* Título principal */
