--- a/templates/RF006-TLmanuten.html
+++ b/templates/RF006-TLmanuten.html
@@ -81,6 +81,7 @@
                                 <p class="servico-encaminhado-dia-semana">QUI</p><p class="servico-encaminhado-dia">10</p>
                             </div>
                             <p class="servico-encaminhado-local">{{x[1]}} | {{x[0]}}</p>
+                            <p class="urgencia">Baixa Urgencia</p>
                         </div>
                     </a>
                     {%endfor%}
