--- a/static/CSS/RF006-TLmanuten.css
+++ b/static/CSS/RF006-TLmanuten.css
@@ -141,6 +141,7 @@ hr{
     border: var(--color02) solid 0.1rem;
     border-radius: 0.5rem;
     padding: 1rem;
+    text-transform: capitalize;
 }
 
 .servico_urgencia i{
@@ -264,7 +265,9 @@ hr{
     width: 100%; 
     height: 8rem; 
     padding: 1rem; 
-    box-sizing: border-box; 
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row; 
 }
 /* -------------------------RESPONSIVIDADE----------------------- */
 /* Estilos para telas maiores */
@@ -275,6 +278,13 @@ hr{
     }
     .horas h2{
         font-size: 4rem;
+    }
+
+    .servico-encaminhado{
+        height: 18rem;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
     }
 
     .data{
