--- a/templates/RF006-TLmanuten.html
+++ b/templates/RF006-TLmanuten.html
@@ -81,6 +81,7 @@
                             <p class="servico-encaminhado-dia-semana">QUI</p><p class="servico-encaminhado-dia">10</p>
                         </div>
                         <p class="servico-encaminhado-local">Bloco B | Sala 09</p>
+                        <p class="urgencia">Baixa Urgencia</p>
                     </div>
 
                     <div class="servico-encaminhado">
