--- a/templates/RF006-TLmanuten.html
+++ b/templates/RF006-TLmanuten.html
@@ -81,15 +81,9 @@
                             <p class="servico-encaminhado-dia-semana">QUI</p><p class="servico-encaminhado-dia">10</p>
                         </div>
                         <p class="servico-encaminhado-local">Bloco B | Sala 09</p>
-                        <p class="urgencia">Baixa Urgencia</p>
+                        <p class="servico-urgencia">Baixa Urgencia</p>
                     </div>
 
-                    <div class="servico-encaminhado">
-                        <div class="servico-encaminhado-data">
-                            <p class="servico-encaminhado-dia-semana">QUI</p><p class="servico-encaminhado-dia">10</p>
-                        </div>
-                        <p class="servico-encaminhado-local">Bloco B | Sala 09</p>
-                    </div>
                 </div>
                 <div class="container-solicitacao">
                     <h2>Quer fazer uma Solicitação?</h2>
