--- a/static/CSS/RF006-TLmanuten.css
+++ b/static/CSS/RF006-TLmanuten.css
@@ -194,7 +194,6 @@ hr{
     text-align: center;
     font-size: 1.5rem;
     font-weight: bold;
-    padding-top: 2rem;
 
 }
 
@@ -263,11 +262,21 @@ hr{
 
 .servico-encaminhado {
     width: 100%; 
-    height: 8rem; 
+    height: 12rem; 
     padding: 1rem; 
     box-sizing: border-box;
     display: flex;
-    flex-direction: row; 
+    align-items: center;
+    flex-direction: row;
+}
+
+.servico-urgencia{
+    font-weight: bold;
+    font-size: medium;
+    border: black solid 1px;
+    border-radius: 2rem;
+    padding: 0.5rem;
+    margin: 0.5rem;
 }
 /* -------------------------RESPONSIVIDADE----------------------- */
 /* Estilos para telas maiores */
