Finalização da tela RF006A

--- a/templates/RF006A-aceitaSolic.html
+++ b/templates/RF006A-aceitaSolic.html
@@ -35,6 +35,7 @@
             <div class="detalhes-solicitacao__cabecalho">
                 <h1 class="detalhes-solicitacao__titulo">{{campo_sala}} - {{campo_servico}}</h1>
                 <p class="detalhes-solicitacao__autor">{{campo_nome_solicitante}} - {{campo_funcao_solicitante}}</p>
+                <p class="detalhes-solicitacao__urgencia">{{campo_urgencia}}</p>
             </div>
             <!-- Linha divisora entre o cabeçalho e o corpo da solicitação -->
             <hr class="detalhes-solicitacao__divisor">
