--- a/templates/RF006-TLmanuten.html
+++ b/templates/RF006-TLmanuten.html
@@ -12,6 +12,8 @@
          <link rel="stylesheet" href="/static/CSS/RF006-TLmanuten.css">
          <!-- Link para os ICONS -->
         <script src="https://kit.fontawesome.com/e9b74fb3c4.js" crossorigin="anonymous"></script>
+        <!-- Link Arquivo JS -->
+        <script defer src="/static/JS/RF006-TLmanuten.js"></script>
         <!-- link Arquivo JS data -->
          <script defer src="/static/JS/funcao-data.js"></script>
          <!-- Link Arquivo JS saudação -->
@@ -35,8 +37,8 @@
             <section class="container-header-user">
                 <figure><img src="https://st4.depositphotos.com/11574170/25191/v/450/depositphotos_251916955-stock-illustration-user-glyph-color-icon.jpg" alt="Imagem de Perfil"></figure>
                 <div class="container-header-user_info">
-                    <h2 class="container-header-user_nome">Jorge</h2>
-                    <p class="container-header-user_cargo">Técnico</p>
+                    <h2 class="container-header-user_nome">{{campo_nome}}</h2>
+                    <p class="container-header-user_cargo">{{campo_funcao}}</p>
                 </div>
             </section>
         </header>
@@ -81,7 +83,7 @@
                 <div class="container-solicitacao">
                     <h2>Quer fazer uma Solicitação?</h2>
                     <p>Solicite com o botão abaixo!</p>
-                    <button class="btn-fazer-solicitacao">Fazer Solicitação</button>
+                    <button class="btn-fazer-solicitacao" onclick="redirectSolicitacao()">Fazer Solicitação</button>
                 </div>
              </section>
         </main>
