Correção do link dos encaminhamentos iniciados

--- a/templates/RF006-TLmanuten.html
+++ b/templates/RF006-TLmanuten.html
@@ -56,7 +56,7 @@
                    </div>
                    <div class="servico_urgencia">
                         <p class="urgencia">{{x[2]}}</p>
-                        <a href="/RF007"><i class="fa-solid fa-arrow-right"></i></a>
+                        <a href="/RF007/{{x[4]}}"><i class="fa-solid fa-arrow-right"></i></a>
                    </div>
                 </div>
                 {%endfor%}
