--- a/static/CSS/RF005-encamSolic.css
+++ b/static/CSS/RF005-encamSolic.css
@@ -84,21 +84,24 @@ main{
   position: relative;
 }
 
+
+
 .caixa-opcao {
-    padding: 8px;
-    margin: 1rem 3rem 2rem 3rem;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    color: var(--color01);
-    background-color: var(--color06);
-    border: none;
-    border-radius: 5rem;
-    box-shadow:  5px 8px 18px var(--color02);
-    transition-duration: 0.2s;
+  padding: 8px;
+  margin: 1rem 2rem 1rem 2rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  color: var(--color01);
+  background-color: var(--color06);
+  border: none;
+  border-radius: 5rem;
+  box-shadow: 0px -1px 7px rgba(20,23,53,0.3);
+  transition-duration: 0.2s;
     
 }
+
 
 /* Transição do select */
 .caixa-opcao.selected {
@@ -120,60 +123,55 @@ main{
   align-items: center;
   font-size: 1.5rem;
 }
-.opcao_user p{
-  background-color: var(--color05);
-  text-align: center;
-  margin-bottom: 0.5rem;
-  padding: 0.5rem 2rem 0.5rem 2rem;
-  border-radius: 5rem;
-  font-weight: 600;
-}
 
 
 
 .status_disponivel{
   padding: 0.5rem 1rem 0.5rem 1rem;
   background-color: var(--colorGreen);
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   border-radius: 0.5rem;
+  text-align: center;
   display: none;
+  
 }
 
 .status_n-disponivel{
-  padding: 0.5rem 1rem 0.5rem 1rem;
-  background-color: var(--colorRed);
-  border-radius: 0.5rem;
-  font-size: 1.5rem;
-  text-align: center;
+    padding: 0.5rem 1rem 0.5rem 1rem;
+    background-color: var(--colorRed);
+    border-radius: 0.5rem;
+    font-size: 1.2rem;
+    text-align: center;
+    
   
 }
 
 /* Estilo da Escolha da urgencia/emergencia */
 
 .form_btn-emergencia{
-  width: 100vw;
-  height: 18vh;
-  position: fixed;
-  bottom: 0;
-  z-index: 1;
-  background-color: var(--color06);
-  border-top-left-radius: 4rem ;
-  border-top-right-radius: 4rem;
-  color: var(--color01);
+    width: 100vw;
+    height: 25vh;
+    position: fixed;
+    bottom: 0;
+    z-index: 1;
+    background-color: var(--color06);
+    border-top-left-radius: 4rem;
+    border-top-right-radius: 4rem;
+    color: var(--color01);
   
 }
 
 .form_btn-emergencia__titulo{
-  margin: 1rem 0rem 0rem 3rem;
-  font-size: 1.2rem;
+  margin: 2rem 0rem 0rem 3rem;
+  font-size: 1.5rem;
 }
 
 .botoes{
-  display: flex;
-  width: 100vw;
-  align-items: center;
-  justify-content: space-around;
-  margin-top: 1rem;
+    display: flex;
+    width: 100vw;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 2rem;
 
 }
 
@@ -196,18 +194,18 @@ main{
 }
 
 .btn-enviar{
-    background-color: var(--color03); 
-    color: var(--color01); 
-    width: 20rem;
-    padding: 0.9rem;
-    text-align: center;
-    border: none;
-    border-radius: 50px;
-    font-size: 1.4rem;
-    font-weight: bold;
-    cursor: pointer;
-    margin: 1rem 10rem 0rem 10rem;
-    transition-duration: 0.2s;
+  background-color: var(--color03);
+  color: var(--color01);
+  width: 20rem;
+  padding: 1rem;
+  text-align: center;
+  border: none;
+  border-radius: 50px;
+  font-size: 1.4rem;
+  font-weight: bold;
+  cursor: pointer;
+  margin: 1.5rem 10rem 0rem 10rem;
+  transition-duration: 0.2s;
 }
 
 .btn-enviar:hover{
@@ -229,6 +227,11 @@ main{
 }
 
 @media (min-width:1000px){
+  .main{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 100%;
+  }
   .container-header_user-nome{
     font-size: 2rem;
   }
