--- a/static/CSS/RF005-encamSolic.css
+++ b/static/CSS/RF005-encamSolic.css
@@ -85,7 +85,6 @@ main{
 }
 
 
-
 .caixa-opcao {
   padding: 8px;
   margin: 1rem 2rem 1rem 2rem;
@@ -232,6 +231,11 @@ main{
     grid-template-columns: 1fr 1fr;
     height: 100%;
   }
+  #form_select-user{
+    display: grid;
+    grid-template-columns: auto auto;
+    margin: 0rem 4rem 0rem 4rem;
+  }
   .container-header_user-nome{
     font-size: 2rem;
   }
@@ -249,7 +253,10 @@ main{
     height: 30vh;
   }
   .form_btn-emergencia__titulo{
-    font-size: 2rem;
+      margin: 2rem 0rem 0rem 12rem;
+      font-size: 2rem;
+  }
+    
   }
   .botoes{
     margin-top: 4rem;
